--- a/index.html
+++ b/index.html
@@ -1,51 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="nav.css" />
+    <script src="p5.min.js"></script>
+    <script src="p5.collide2d.min.js"></script>
+    <script src="pong.js"></script>
+    <link rel="stylesheet" type="text/css" href="kirby.css" />
   </head>
   <body>
-    <header>
-      <ul>
-        <img class="bild" src="logo.jpeg" />
-        <li><a class="aktiv" href="index.html">Startseite</a></li>
-        <li><a class="me" href="nina.html">Über mich</a></li>
-        <li><a class="projekt" href="projekt.html">Projekte</a></li>
-        <li><a class="daten" href="kontakt.html">Kontakt</a></li>
-      </ul>
-    </header>
-    <main>
-      <div id="willkommen">
-        <h1>Herzlich Willkommen</h1>
-      </div>
-      <div id="news">
-        <h2>News</h2>
-      </div>
-
-      <section>
-        <div>
-          <video controls width="300" height="225">
-            <source
-              src="D1_191205_H_Handlungsgestaltung-Video_Tanzer,Kolb.mp4"
-              type="video/mp4"
-            />
-          </video>
-        </div>
-        <img
-          width="300"
-          height="225"
-          class="anfang"
-          src="LunarAnfang.png"
-          alt="Lunar Lander Anfangszustand"
-        />
-        <img
-          width="300"
-          height="225"
-          class="roulette"
-          src="Bildschirmfoto 2019-12-13 um 13.09.08.png"
-          alt="roulette"
-        />
-      </section>
-    </main>
+    <div class="bild">
+      <img src="gameboysmall.png" width="54%" />
+    </div>
+    <div id="game" class="black"></div>
   </body>
 </html>
