--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header>
       <ul>
         <img class="bild" src="logo.jpeg" />
-        <li><a class="aktiv" href="index2.html">Startseite</a></li>
+        <li><a class="aktiv" href="index.html">Startseite</a></li>
         <li><a class="me" href="nina.html">Über mich</a></li>
         <li><a class="projekt" href="projekt.html">Projekte</a></li>
         <li><a class="daten" href="kontakt.html">Kontakt</a></li>
