--- a/projekt.html
+++ b/projekt.html
@@ -12,7 +12,7 @@
         <li><a href="LunarLander2.html">LunarLander</a></li>
         <li><a href="roulette.html">Roulette</a></li>
         <li><a href="Design.html">Happy Halloween</a></li>
-        <li><a href="index.html">Pong</a></li>
+        <li><a href="index1.html">Pong</a></li>
       </ul>
     </nav>
   </body>
